[package]
name = "rust-caster"
version = "0.9.4"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
ansi_term = "0.9.0"
rust_cast = { git = "https://github.com/azasypkin/rust-cast.git", branch = "master" }
docopt = "0.7.0"
env_logger = "0.4.2"
log = "0.3.7"
rustc-serialize = "0.3.22"
