[package]
name = "rust-caster"
version = "0.10.0"
authors = ["Aleh Zasypkin <aleh.zasypkin@gmail.com>"]

[dependencies]
ansi_term = "0.10.2"
docopt = "0.8.1"
env_logger = "0.4.3"
log = "0.3.8"
rust_cast = { git = "https://github.com/azasypkin/rust-cast.git", branch = "master" }
serde = "1.0.23"
serde_derive = "1.0.23"
